# ChangeLog for virtual/jdk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/jdk/ChangeLog,v 1.19 2008/01/18 01:41:42 ranger Exp $

  18 Jan 2008; Brent Baude <ranger@gentoo.org> jdk-1.6.0.ebuild:
  Marking jdk-1.6.0 ~ppc64 for bug 166789

  24 Dec 2007; nixnut <nixnut@gentoo.org> jdk-1.6.0.ebuild:
  Added ~ppc wrt bug 166789

  16 Dec 2007; Vlastimil Babka <caster@gentoo.org> jdk-1.6.0.ebuild:
  Add ibm-jdk-bin-1.6 to jdk-1.6 alternatives.

  19 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org> jdk-1.6.0.ebuild:
  amd64 stable, bug #194711

  21 Aug 2007; Christian Faulhammer <opfer@gentoo.org> jdk-1.6.0.ebuild:
  stable x86, bug 189277

*jdk-1.6.0 (13 Dec 2006)

  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> +jdk-1.6.0.ebuild:
  Bump for 1.6 JDK.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> jdk-1.5.0.ebuild:
  ppc stable. bug #147254

  15 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jdk-1.5.0.ebuild:
  Stabilizing on ia64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jdk-1.5.0.ebuild:
  Stabilizing on amd64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jdk-1.5.0.ebuild:
  Stabilizing on ppc64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Jackson <tsunam@gentoo.org> jdk-1.5.0.ebuild:
  New java stable on x86; bug #147254

  11 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jdk-1.4.2.ebuild:
  Changed order of dependencies, so that kaffe isn't the second choice.

  03 Sep 2006; Joshua Nichols <nichoj@gentoo.org> jdk-1.3.ebuild,
  jdk-1.4.1.ebuild:
  Removed deps of JDKs that aren't in the tree anymore, from bug #140495

  23 Aug 2006; Sven Wegener <swegener@gentoo.org> jdk-1.3.ebuild,
  jdk-1.4.1.ebuild, jdk-1.4.2.ebuild, jdk-1.5.0.ebuild:
  Virtual packages have no build-time dependencies.

  22 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> jdk-1.5.0.ebuild: